--- a/StudyMates/Storyboards/Home.storyboard
+++ b/StudyMates/Storyboards/Home.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home-->
+        <!--Home View Controller-->
         <scene sceneID="NGy-PP-CKD">
             <objects>
                 <viewController storyboardIdentifier="HomeViewController" id="X7J-8E-rji" customClass="HomeViewController" customModule="StudyMates" customModuleProvider="target" sceneMemberID="viewController">
@@ -26,7 +26,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JjQ-yB-Z7o">
-                                <rect key="frame" x="0.0" y="332" width="375" height="381"/>
+                                <rect key="frame" x="0.0" y="332" width="375" height="397"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -50,37 +50,48 @@
                                 </prototypes>
                             </tableView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Pupp" translatesAutoresizingMaskIntoConstraints="NO" id="cW6-hC-fIp">
-                                <rect key="frame" x="126" y="64" width="120" height="120"/>
+                                <rect key="frame" x="127" y="116" width="120" height="120"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="mvY-3E-IpT"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" id="gKQ-OR-EoJ"/>
+                    <navigationItem key="navigationItem" id="1VT-RO-bxp"/>
                     <connections>
                         <outlet property="profileImage" destination="cW6-hC-fIp" id="JMI-eB-1N2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nIK-rd-K57" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="796" y="235.71428571428572"/>
+            <point key="canvasLocation" x="1738.4000000000001" y="235.71428571428572"/>
         </scene>
-        <!--Item 1-->
+        <!--Profile-->
         <scene sceneID="r4b-4Z-67H">
             <objects>
-                <viewController id="Pur-mg-AJ9" sceneMemberID="viewController">
+                <viewController id="Pur-mg-AJ9" customClass="ProfileViewController" customModule="StudyMates" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kbQ-Z9-4jr">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="amg-7p-kgW">
+                                <rect key="frame" x="122" y="592" width="104" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <state key="normal" title="Logout"/>
+                                <connections>
+                                    <action selector="onSignOut:" destination="Pur-mg-AJ9" eventType="touchUpInside" id="3SG-Xl-Yri"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="1QO-B9-UGt"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="mbA-vJ-vcx"/>
+                    <tabBarItem key="tabBarItem" title="Profile" id="mbA-vJ-vcx"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nFK-yu-2zk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2028" y="236"/>
+            <point key="canvasLocation" x="2970.4000000000001" y="235.71428571428572"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="hdx-ox-i8z">
@@ -92,13 +103,32 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="X7J-8E-rji" kind="relationship" relationship="viewControllers" id="0hp-RM-63L"/>
+                        <segue destination="UDH-qR-VTw" kind="relationship" relationship="viewControllers" id="0hp-RM-63L"/>
                         <segue destination="Pur-mg-AJ9" kind="relationship" relationship="viewControllers" id="TO5-Mi-5lC"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UPR-oI-iUj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1351" y="-507"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="yr0-rP-quZ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UDH-qR-VTw" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Home" id="gKQ-OR-EoJ"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eSx-HA-zaG">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="X7J-8E-rji" kind="relationship" relationship="rootViewController" id="1vi-QG-bx7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SqY-Rw-byi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="796" y="235.71428571428572"/>
         </scene>
     </scenes>
     <resources>
